fix: placeholder text not showing

--- a/src/Components/AddItem/AddItem.scss
+++ b/src/Components/AddItem/AddItem.scss
@@ -74,5 +74,5 @@ div.add-todo-item-checkbox > input[type="checkbox"] {
   background-color: $nord5;
 }
 .add-todo-item-text::placeholder {
-  opacity: 50%;
+  opacity: 0.5;
 }
